# langgraph-react-ad-measurement

./: .gitignore  README.md  langgraph.json  pyproject.toml
apps/: evals_dashboard.py
data/: README.md
data/experiment_outputs/: README.md
notebooks/: 01_data_generation_walkthrough.ipynb  02_tool_behavior_analysis.ipynb  03_react_agent_walkthrough.ipynb  04_failure_mode_exploration.ipynb  05_langsmith_trace_exploration.ipynb  06_evals_dashboard.ipynb
notebooks/data/: synthetic_campaigns.csv
prompts/: react_agent_prompt.md
src/iroas_agent/: __init__.py  agent.py  dashboard.py  data.py  evaluation.py  materialize.py  prompting.py  runner.py  schemas.py  studio.py  tools.py  tracing.py
